fix tall squished videos

--- a/scss/_partials/_news.scss
+++ b/scss/_partials/_news.scss
@@ -17,6 +17,10 @@
   }
 }
 
+video {
+	height: auto;
+}
+
 .news-front .more {
 	color: $gray-dark;
 
